MATCHDAY-91 Ensure no URL objects used as Map keys